force-app/main/default/objects/SCOC__LCResponse__c/SCOC__LCResponse__c.object-meta.xml
<CustomObject>
    <description>LiquidCredit Responses</description>
    <label>LCResponse</label>
    <nameField>
        <displayFormat>LCR-{00000}</displayFormat>
        <label>LiquidCredit Response</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LCResponses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>