force-app/main/default/objects/SCOC__LCResponse__c/fields/SCOC__creditor_id__c.field-meta.xml
<CustomField>
    <fullName>SCOC__creditor_id__c</fullName>
    <description>This field contains the creditor ID for the LiquidCredit Request.</description>
    <label>Creditor ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>