force-app/main/default/objects/SCOC__LCResponse__c/fields/SCOC__customer_id__c.field-meta.xml
<CustomField>
    <fullName>SCOC__customer_id__c</fullName>
    <description>This field contains the customer ID for the LiquidCredit Request.</description>
    <label>Customer ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>