force-app/main/default/objects/SCOC__LCResponse__c/fields/SCOC__IsRescore__c.field-meta.xml
<CustomField>
    <fullName>SCOC__IsRescore__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this request is a Rescore.</description>
    <label>Rescore Indicator</label>
    <type>Checkbox</type>
</CustomField>