force-app/main/default/objects/SCOC__LCResponse__c/fields/SCOC__Loan__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is required and represents the loan this response is tied to.</description>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>LCResponse</relationshipLabel>
    <relationshipName>LCResponse</relationshipName>
    <type>Lookup</type>
</CustomField>