force-app/main/default/objects/SCOC__LCResponse__c/fields/SCOC__loan_pmt__c.field-meta.xml
<CustomField>
    <fullName>SCOC__loan_pmt__c</fullName>
    <description>This field contains the loan payment associated to the loan for the LiquidCredit Request.</description>
    <label>Loan Payment</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>