force-app/main/default/objects/SCOC__LCResponse__c/fields/SCOC__loan_purpose__c.field-meta.xml
<CustomField>
    <fullName>SCOC__loan_purpose__c</fullName>
    <description>This field contains the loan purpose associated to the loan for the LiquidCredit Request.</description>
    <label>Loan Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>