force-app/main/default/objects/SCOC__LCResponse__c/fields/SCOC__loan_term__c.field-meta.xml
<CustomField>
    <fullName>SCOC__loan_term__c</fullName>
    <description>This field contains the loan term associated to the loan for the LiquidCredit Request.</description>
    <label>Loan Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>