force-app/main/default/objects/SCOC__LCResponse__c/fields/SCOC__nCinoAllowReprocessing__c.field-meta.xml
<CustomField>
    <fullName>SCOC__nCinoAllowReprocessing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field contains the nCino Allow Response Reprocessing flag used to enforce reprocessing rules for the LiquidCredit Request.</description>
    <label>nCino Allow Response Reprocessing</label>
    <type>Checkbox</type>
</CustomField>