force-app/main/default/objects/SCOC__LCResponse__c/fields/SCOC__nCinoProcessingPackage__c.field-meta.xml
<CustomField>
    <fullName>SCOC__nCinoProcessingPackage__c</fullName>
    <description>This field contains the nCino Response Processing Package used for the LiquidCredit Request.</description>
    <label>nCino Response Processing Package</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>