force-app/main/default/objects/SCOC__LCResponse__c/fields/SCOC__nCinoProcessingVersion__c.field-meta.xml
<CustomField>
    <fullName>SCOC__nCinoProcessingVersion__c</fullName>
    <description>This field contains the nCino Response Processing Version used for the LiquidCredit Request.</description>
    <label>nCino Response Processing Version</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
</CustomField>