force-app/main/default/objects/SCOC__LCResponse__c/fields/SCOC__PreviousLCResponse__c.field-meta.xml
<CustomField>
    <fullName>SCOC__PreviousLCResponse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Previous Liquid Credit Response that this rescore was performed from.</description>
    <label>Previous Liquid Credit Response</label>
    <referenceTo>SCOC__LCResponse__c</referenceTo>
    <relationshipLabel>Previous Liquid Credit Response</relationshipLabel>
    <relationshipName>PreviousLCResponse</relationshipName>
    <type>Lookup</type>
</CustomField>