force-app/main/default/objects/SCOC__LCResponse__c/fields/SCOC__product_category_id__c.field-meta.xml
<CustomField>
    <fullName>SCOC__product_category_id__c</fullName>
    <description>Product Category ID</description>
    <label>Product Category ID</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2000</fullName>
                <label>Commercial Card</label>
            </value>
            <value>
                <fullName>2300</fullName>
                <label>Lease</label>
            </value>
            <value>
                <fullName>2100</fullName>
                <label>Line of Credit</label>
            </value>
            <value>
                <fullName>2400</fullName>
                <label>Start-up--Business</label>
            </value>
            <value>
                <fullName>2200</fullName>
                <label>Term Loan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>