force-app/main/default/objects/SCOC__LCResponse__c/fields/SCOC__ResponseType__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ResponseType__c</fullName>
    <description>This field contains the response type for the LiquidCredit Request.</description>
    <label>Response Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>