force-app/main/default/objects/SCOC__LCResponse__c/fields/SCOC__SBSS7Score__c.field-meta.xml
<CustomField>
    <fullName>SCOC__SBSS7Score__c</fullName>
    <description>This field contains the SBSS7 score for the LiquidCredit Request.</description>
    <label>SBSS7 Score</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>