force-app/main/default/objects/SCOC__LCResponse__c/fields/SCOC__submission_id__c.field-meta.xml
<CustomField>
    <fullName>SCOC__submission_id__c</fullName>
    <description>This field contains the submission id for the LiquidCredit Request.</description>
    <label>Submission ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>