force-app/main/default/objects/SCOC__LCResponse__c/fields/SCOC__timestamp__c.field-meta.xml
<CustomField>
    <fullName>SCOC__timestamp__c</fullName>
    <description>This field contains the timestamp of this LiquidCredit Response.</description>
    <label>Time Stamp</label>
    <type>DateTime</type>
</CustomField>