force-app/main/default/objects/SCOC__LCResponse__c/fields/SCOC__transaction_note__c.field-meta.xml
<CustomField>
    <fullName>SCOC__transaction_note__c</fullName>
    <description>This field contains the transaction note for the LiquidCredit Request.</description>
    <label>Transaction Note</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>